Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthcare-service
  namespace: healthcare
spec:
  selector:
    app: healthcare-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
